fix: fix z-indexes

--- a/src/app/styles/variables/global.css
+++ b/src/app/styles/variables/global.css
@@ -5,5 +5,5 @@
     --sidebar-closed-width-mobile: 40px;
     --z-index-sidebar: 30;
     --z-index-auth-modal: 20;
-    --z-index--dropdown: 10;
+    --z-index-dropdown: 10;
 }
